2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/agentes/configurar_agentes.php: Changed
	interval in conf.

2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/gis_maps/configure_gis_maps.php: Changed
	button when you update.

2014-06-05  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Added
	missed columns creation in migration scripts

2014-06-05  Junichi Satoh  <junichi@rworks.jp>
	
	* include/help/ja/help_plugin_macros.php,
	include/help/ja/help_alert_macros.php: Added new macros.

2014-06-05  Junichi Satoh  <junichi@rworks.jp>

	* godmode/modules/manage_network_components_form_common.php: Removed
	unnecesary variable.

2014-06-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup_general.php: Disable the "Enable
	Netflow" radio buttons if the server is installed on a
	Windows machine.

2014-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/help/es/help_plugin_macros.php
	include/help/es/help_alert_macros.php
	include/help/en/help_plugin_macros.php
	include/help/en/help_alert_macros.php: Added missed and
	new macros to help

2014-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php
	include/functions_graph.php
	include/functions_reporting.php
	include/graphs/functions_pchart.php
	include/graphs/functions_flot.php
	include/functions.php
	include/functions_events.php: Fix a lot of errors
	on events items on reports using now the same query 
	as events view, etc.

	* include/styles/pandora.css: Little aesthetic
	improvement in focus buttons and unset webfont

2014-06-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/mergely/*: added mergely javascript library.

2014-06-04  Sancho Lerena <slerena@artica.es>

	* images/backgrounds/flowers.jpg,
	images/backgrounds/grass.jpg,
	images/backgrounds/wood.jpg: Compressed backgrounds.