@@ -1,3 +1,11 @@
+2014-06-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* extensions/files_repo/files_repo_get_file.php,
+	  extensions/files_repo/files_repo_list.php,
+	  extensions/files_repo/functions_files_repo.php,
+	  godmode/setup/setup_general.php: Improved the Windows
+	compatibility and fixed some errors.
+
 2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* godmode/agentes/configurar_agentes.php: Changed
